--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: The-Forest-Pilot-A-Story-for-Boy-Scouts_68506
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 68506-h/images/cover.jpg
 creator:
   author:
     agent_name: Huntington, Edward
     gutenberg_agent_id: '54801'
     url: http://www.gutenberg.org/2009/agents/54801
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/68506#The-Forest-Pilot-A-Story-for-Boy-Scouts
 gutenberg_issued: '2022-07-11'
 identifiers:
   gutenberg: '68506'
